--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ div {
   margin-left: 50px;
   border-bottom: 2px solid;
   border-left: 5px solid;
+  border-right: 0px solid
 }
 
 .blue {
@@ -58,6 +59,7 @@ div {
   margin-right: 50px;
   border-right: 5px solid;
   border-top: 2px solid;
+  border-left:0px solid;
   color: #C4C4C4;
 }
 
@@ -71,6 +73,7 @@ div {
   margin-left: 50px;
   border-bottom: 2px solid;
   border-left: 5px solid;
+  border-right:0px solid;
 }
 
 .yellow p {
@@ -81,8 +84,9 @@ div {
   background-color: #008500;
   text-align: left;
   margin-right: 50px;
-  border-right: 5px solid white;
-  border-top: 2px solid white;
+  border-right: 5px solid;
+  border-top: 2px solid;
+  border-left:0px solid;
 }
 
 footer {
