--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,8 @@ div {
   margin-left: 50px;
   border-bottom: 2px solid;
   border-left: 5px solid;
-  border-right: 0px solid
+  border-right: 0px solid;
+  border-top:0px solid;
 }
 
 .blue {
@@ -60,6 +61,7 @@ div {
   border-right: 5px solid;
   border-top: 2px solid;
   border-left:0px solid;
+  border-bottom:0px solid;
 }
 
 .blue p {
@@ -77,6 +79,7 @@ div {
   border-bottom: 2px solid;
   border-left: 5px solid;
   border-right:0px solid;
+  border-top:0px solid;
 }
 
 .yellow p {
@@ -90,6 +93,7 @@ div {
   border-right: 5px solid;
   border-top: 2px solid;
   border-left:0px solid;
+  border-bottom:0px solid;
 }
 
 footer {
